--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,16 +1,17 @@
-image: Ubuntu  # образ для сборки
+image: Ubuntu
 
-stack: jdk 11  # версия JDK
-
+stack: jdk 11
 branches:
   only:
-    - master  # ветка git
+    - master
 
-build: off  # будем использовать свой скрипт сборки
+build: off
 
 install:
-  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
-  - java -jar ./artifacts/app-mbank.jar &
+  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-ibank-build-for-testers.jar" -PassThru
 
 build_script:
-  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
+  - ps: ./gradlew test --info "-Dselenide.headless=true"
+
+on_finish:
+  - ps: Stop-Process -Id $App.Id
