--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,16 @@
-image: Ubuntu
+image: Ubuntu  # образ для сборки
 
-stack: jdk 11
+stack: jdk 11  # версия JDK
+
 branches:
   only:
-    - master
+    - master  # ветка git
 
-build: off
+build: off  # будем использовать свой скрипт сборки
 
 install:
-  - ps: $App = Start-Process -FilePath java -ArgumentList "-jar ./artifacts/app-ibank-build-for-testers.jar" -PassThru
+  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-ibank-build-for-testers.jar &
 
 build_script:
-  - ps: ./gradlew test --info "-Dselenide.headless=true"
-
-on_finish:
-  - ps: Stop-Process -Id $App.Id
+  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
